--- a/php.ini
+++ b/php.ini
@@ -3,7 +3,7 @@
 ; To make changes to this file, use the cPanel MultiPHP INI Editor (Home >> Software >> MultiPHP INI Editor)
 ; For more information, read our documentation (https://go.cpanel.net/EA4ModifyINI)
 
-allow_url_fopen = Off
+allow_url_fopen = On
 allow_url_include = Off
 display_errors = Off
 enable_dl = Off
